Putting local changes, just to not forget about. Host tools build system doesn't work yet.

--- a/unittest/simple_lib/Makefile
+++ b/unittest/simple_lib/Makefile
@@ -1,8 +1,6 @@
 default: libsimple
 
-include buildsys/toolchain.mk
-include buildsys/project.mk
-include buildsys/package_make.mk
+include buildsys/main.mk
 
 ##################################################################
 
